conditions.Conditions.scala.code
def estFaceMur():
  if (baggle estFaceMur){recule(1:Int)}
    
  else {avance(1:Int)}